2010-06-08	The InnoDB Team

	* dict/dict0load.c:
	Fix Bug#54009 Server crashes when data is selected from non backed
	up table for InnoDB plugin

2010-06-02	The InnoDB Team

	* include/db0err.h, include/lock0lock.h, include/row0mysql.h,
	lock/lock0lock.c, row/row0ins.c, row/row0mysql.c, row/row0sel.c:
	Fix Bug#53674 InnoDB: Error: unlock row could not find a
	4 mode lock on the record

2010-06-01	The InnoDB Team

	* include/sync0rw.h, sync/sync0rw.c:
	Fix Bug#48197 Concurrent rw_lock_free may cause assertion failure

2010-06-01	The InnoDB Team

	* row/row0umod.c:
	Fix Bug#53812 assert row/row0umod.c line 660 in txn rollback
	after crash recovery

2010-05-24	The InnoDB Team

	* dict/dict0boot.c, dict/dict0crea.c, fil/fil0fil.c,
	include/dict0boot.h, include/fil0fil.h, row/row0mysql.c:
	Fix Bug#53578: assert on invalid page access, in fil_io()

2010-05-12	The InnoDB Team

	* handler/handler0alter.cc:
	Fix Bug#53591 crash with fast alter table and text/blob prefix
	primary key

2010-05-12	The InnoDB Team

	* row/row0merge.c:
	Fix Bug#53471 row_merge_drop_temp_indexes() refers freed memory, SEGVs

2010-05-11	The InnoDB Team

	* mysql-test/innodb_bug53290.test, mysql-test/innodb_bug53290.result,
	include/rem0cmp.h, rem/rem0cmp.c, row/row0merge.c:
	Fix Bug#53290 wrong duplicate key error when adding a unique index
	via fast alter table

2010-05-11	The InnoDB Team
	* buf/buf0lru.c, include/buf0buf.ic:
	Fix Bug#53307 valgrind: warnings in main.partition_innodb_plugin

2010-05-05	The InnoDB Team

	* row/row0merge.c:
	Fix Bug#53256 in a stress test, assert dict/dict0dict.c:815
	table2 == NULL

2010-05-05	The InnoDB Team

	* handler/ha_innodb.cc:
	Fix Bug#53165 Setting innodb_change_buffering=DEFAULT produces
	incorrect result

2010-05-04	The InnoDB Team

	* fsp/fsp0fsp.c:
	Fix Bug#53306 valgrind: warnings in innodb.innodb

2010-05-03	The InnoDB Team

	* buf0buf.c:
	Fix Bug#53248 compressed tables page checksum mismatch after
	re-enabling innodb_checksums
